--- a/tutorial/Gmail - CryptoMirror Tutorial.html
+++ b/tutorial/Gmail - CryptoMirror Tutorial.html
@@ -11,7 +11,7 @@ function Print(){document.body.offsetHeight;window.print()};
 // ]]>
 </script>
 </head>
-<body onload="Print()">
+<body onload="">
 <div class="bodycontainer">
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
 <tbody><tr height="14px">
